--- a/PowerToys/FancyZones/applied-layouts.json
+++ b/PowerToys/FancyZones/applied-layouts.json
@@ -3,18 +3,69 @@
     {
       "device": {
         "monitor": "AUS2705",
-        "monitor-instance": "5\u00262cc63995\u00260\u0026UID4355",
+        "monitor-instance": "5\u00262cc63995\u00260\u0026UID4357",
+        "monitor-number": 1,
+        "serial-number": "R4LMQS165047",
+        "virtual-desktop": "{00000000-0000-0000-0000-000000000000}"
+      },
+      "applied-layout": {
+        "uuid": "{43B0E0FF-0CB0-4F78-882B-D4890229B8B7}",
+        "type": "custom",
+        "show-spacing": true,
+        "spacing": 6,
+        "zone-count": 3,
+        "sensitivity-radius": 0
+      }
+    },
+    {
+      "device": {
+        "monitor": "MSI30C2",
+        "monitor-instance": "5\u00262cc63995\u00260\u0026UID4352",
+        "monitor-number": 2,
+        "serial-number": "PC2M043900542",
+        "virtual-desktop": "{00000000-0000-0000-0000-000000000000}"
+      },
+      "applied-layout": {
+        "uuid": "{43B0E0FF-0CB0-4F78-882B-D4890229B8B7}",
+        "type": "custom",
+        "show-spacing": false,
+        "spacing": 0,
+        "zone-count": 3,
+        "sensitivity-radius": 0
+      }
+    },
+    {
+      "device": {
+        "monitor": "AUS2705",
+        "monitor-instance": "5\u00262cc63995\u00260\u0026UID4357",
         "monitor-number": 2,
         "serial-number": "R4LMQS165047",
         "virtual-desktop": "{00000000-0000-0000-0000-000000000000}"
       },
       "applied-layout": {
-        "uuid": "{0AD08900-0157-4869-AB76-27616F6C4F73}",
+        "uuid": "{43B0E0FF-0CB0-4F78-882B-D4890229B8B7}",
         "type": "custom",
         "show-spacing": false,
-        "spacing": 16,
+        "spacing": 0,
         "zone-count": 3,
-        "sensitivity-radius": 20
+        "sensitivity-radius": 0
+      }
+    },
+    {
+      "device": {
+        "monitor": "MSI30C2",
+        "monitor-instance": "5\u00262cc63995\u00260\u0026UID4352",
+        "monitor-number": 1,
+        "serial-number": "PC2M043900542",
+        "virtual-desktop": "{00000000-0000-0000-0000-000000000000}"
+      },
+      "applied-layout": {
+        "uuid": "{43B0E0FF-0CB0-4F78-882B-D4890229B8B7}",
+        "type": "custom",
+        "show-spacing": false,
+        "spacing": 0,
+        "zone-count": 3,
+        "sensitivity-radius": 0
       }
     },
     {
@@ -28,7 +79,7 @@
       "applied-layout": {
         "uuid": "{43B0E0FF-0CB0-4F78-882B-D4890229B8B7}",
         "type": "custom",
-        "show-spacing": true,
+        "show-spacing": false,
         "spacing": 0,
         "zone-count": 3,
         "sensitivity-radius": 0
@@ -40,40 +91,6 @@
         "monitor-instance": "1\u00268713bca\u00260\u0026UID0",
         "monitor-number": 9,
         "serial-number": "",
-        "virtual-desktop": "{00000000-0000-0000-0000-000000000000}"
-      },
-      "applied-layout": {
-        "uuid": "{00000000-0000-0000-0000-000000000000}",
-        "type": "priority-grid",
-        "show-spacing": true,
-        "spacing": 16,
-        "zone-count": 3,
-        "sensitivity-radius": 20
-      }
-    },
-    {
-      "device": {
-        "monitor": "MSI4BA9",
-        "monitor-instance": "5\u00262cc63995\u00260\u0026UID4352",
-        "monitor-number": 2,
-        "serial-number": "BA9H523801294",
-        "virtual-desktop": "{00000000-0000-0000-0000-000000000000}"
-      },
-      "applied-layout": {
-        "uuid": "{00000000-0000-0000-0000-000000000000}",
-        "type": "priority-grid",
-        "show-spacing": true,
-        "spacing": 16,
-        "zone-count": 3,
-        "sensitivity-radius": 20
-      }
-    },
-    {
-      "device": {
-        "monitor": "AUS2705",
-        "monitor-instance": "5\u00262cc63995\u00260\u0026UID4357",
-        "monitor-number": 1,
-        "serial-number": "R4LMQS165047",
         "virtual-desktop": "{00000000-0000-0000-0000-000000000000}"
       },
       "applied-layout": {
